# Verifiable-Credential-Tools

./: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: rust.yml
get_github_schema/: Cargo.toml
get_github_schema/src/: lib.rs
get_github_schema/tests/: integration_test.rs
search.desc/vc_signing/: vc_signing-desc-0-.js
src/vc_signing/: cbor.rs.html  lib.rs.html  protobuf.rs.html  verifiable_credential.rs.html  verifiable_presentation.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
vc_signing/: Cargo.toml  README.md  all.html  build.rs  index.html  sidebar-items.js  struct.Proof.html  struct.SignatureKeyPair.html  struct.VerifiableCredential.html  struct.VerifiablePresentation.html
vc_signing/cli/: Cargo.toml  README.md
vc_signing/cli/src/: main.rs
vc_signing/example/: Cargo.toml
vc_signing/example/src/: main.rs
vc_signing/example_files/: schema.json  vc.json
vc_signing/node/: example.js  package.json  vc_signing.d.ts  vc_signing.js  vc_signing_bg.wasm  vc_signing_bg.wasm.d.ts
vc_signing/protobuf/: Cargo.toml  build.rs
vc_signing/protobuf/src/: main.rs  verifiable_credentials.proto
vc_signing/src/: builder.rs  cbor.rs  lib.rs  main.rs  native.rs  protobuf.rs  verifiable_credential.rs  verifiable_credentials.proto  verifiable_presentation.rs  wasm.rs
vc_signing/tests/: test.js  tests.rs
vc_signing/web/: vc_signing.d.ts  vc_signing.js  vc_signing_bg.wasm
vc_tools_cli/: Cargo.toml  README.md
vc_tools_cli/src/: main.rs
