[package]
name = "vc_signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
chrono = {version = "0.4.38", features = ["serde"]}
url = {version = "2.5.2", features = ["serde"]}
wasm-bindgen = "0.2.93"
valico = "4.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_family = "wasm")'.dependencies]
ring = {version = "0.17.8", features = ["wasm32_unknown_unknown_js"]}
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ring = "0.17.8"
