[package]
name = "vc_signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
chrono = {version = "0.4.38", features = ["serde"]}
url = {version = "2.5.2", features = ["serde"]}
base64 = "0.22.1"
jsonschema = {version = "0.26.1", default-features = false}
uuid = {version = "1.11.0", features = ["v4"]}

[target.'cfg(target_family = "wasm")'.dependencies]
ring = {version = "0.17.8", features = ["wasm32_unknown_unknown_js"]}
wasm-bindgen = "0.2.93"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ring = "0.17.8"
prost = {version = "0.13.3", optional = true}
prost-types = {version = "0.13.3", optional = true}
ciborium = {version = "0.2.2", optional = true}

[build-dependencies]
prost-build = {version = "0.13.3", optional = true}

[features]
protobuf = ["dep:prost-build", "dep:prost", "dep:prost-types"]
cbor = ["dep:ciborium"]
